--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -81,6 +81,10 @@
         align-self: center;
         text-align: center;
     }
+    #disclaimer{
+        margin-left: 2rem;
+        margin-right: 2rem;
+      }
 }
 
 
